--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -438,7 +438,7 @@ input.ep_form_text {
     }
 
     /* search menu labels */
-    ep_multi_heading { 
+    .ep_multi_heading { 
 	text-align: left:
     }
 
