--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -150,7 +150,7 @@ li.homepage-list {
 }
 
 .feed-img{
-    float:right;
+    float: right;
     padding: 20px 20px 20px 20px;
     width: 25%;
 }
@@ -392,7 +392,7 @@ input.ep_form_text {
 	height: 5px; 
 	width: 40px;
 	padding-right:15px;
-	float: right;
+	display: inline-block; 
     }
 
     /* make dropdown links appear inline */
