--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -392,8 +392,7 @@ input.ep_form_text {
 	height: 5px; 
 	width: 40px;
 	padding-right:15px;
-	display: inline-block;
-	margin-top: 5px;
+	margin: auto;
     }
 
     /* make dropdown links appear inline */
