responsive search results

--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -451,6 +451,12 @@ input.ep_form_text {
 	border-right: none !important;
     }
 
+
+    /* search images */
+    .ep_search_result_docs{
+	display: none;
+    }
+
 }
 
 
