--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -457,7 +457,7 @@ input.ep_form_text {
 	display: none;
     }
 
-    .ep_search_result div:nth-child(2) {
+    .ep_search_result_docs div:nth-child(2) {
 	display: none;
     }
 
