container max width

--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -124,6 +124,7 @@ li.homepage-list {
 
 #outerImageContainer {
     width: fit-content !important;
+    max-width: 100%;
 }
 
 /* -------- homepage feed -------- */
