--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -124,7 +124,7 @@ li.homepage-list {
 
 #lightbox, #outerImageContainer {
     width: fit-content !important;
-    max-width 100% !important;
+    max-width 100% !important;t
 }
 
 /* -------- homepage feed -------- */
