--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -122,7 +122,7 @@ li.homepage-list {
     height: 500px !important;
 }
 
-#lightbox, #outerImageContainer {
+#outerImageContainer {
     width: fit-content !important;
     max-width: 100% !important;
 }
