--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -118,7 +118,7 @@ li.homepage-list {
 .ep_tm_footer{
    border-top-width: 1px;
    font-size: 80%;
-   font-color: #454545;
+   color: #454545;
 
 }
 
