--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -304,7 +304,7 @@ input.ep_form_text {
 
 /* hover state for top level links */
 .mobile-menu li:hover a {
-    color: #4db3ff;
+    color: #ffffff;
     background-color: #8cd3ff;
 }
 
