--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -305,7 +305,7 @@ input.ep_form_text {
 /* hover state for top level links */
 .mobile-menu li:hover a {
     color: #ffffff;
-    background-color: #8cd3ff;
+    background-color: #59bfff;
 }
 
 /* style for dropdown links */
