--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -24,6 +24,7 @@ body {
     font-size: 100% !important;
     height: auto !important;
 
+    max-width: 900px;
     margin: auto;
 
     line-height: 1.6;
