--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -24,7 +24,6 @@ body {
     font-size: 100% !important;
     height: auto !important;
 
-    max-width: 900px;
     margin: auto;
 
     line-height: 1.6;
@@ -36,6 +35,10 @@ body {
     -moz-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
 
+}
+
+.ep_tm_page_content {
+    max-width: 900px;
 }
 
 #wrapper {
