--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -208,7 +208,7 @@ li.homepage-list {
 }
 
 .ep_search_buttons, .ep_search_controls, .ep_search_controls_bottom, .ep_view_group_by, .ep_toolbox_content  {
-    background: #f7f7f7;
+    background: #e8e8ff;
     box-shadow: none;
     border-width: 0px;
     padding: 9px 0px;
