--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -247,6 +247,7 @@ input.ep_form_text {
     padding-right: 10pt;
     padding-top: 8pt;
     padding-bottom: 0pt;
+    margin-bottom: -5pt;
     font-size: 110%;
     font-weight: bold;
     text-decoration: none !important;
