--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -235,6 +235,8 @@ input.ep_form_text {
     margin-bottom: 10pt;
     border: 1px solid #eeeeee;
     background-color: #e8e8ff;
+    background-image: url(images/bar_solid_24px.png);
+    background-repeat: repeat-x;
 }
 
 
