--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -241,7 +241,7 @@ input.ep_form_text {
 
 
 .homepage_heading_panel {
-    background-color: #e8e8ff;
+    /* background-color: #e8e8ff; */
 }
 
 .homepage_box_heading {
