homepage border color

--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -233,7 +233,7 @@ input.ep_form_text {
 .homepage_box {
     margin-top: 10pt;
     margin-bottom: 10pt;
-    border: 1px solid #eeeeee;
+    border: 1px solid #ccc;
     background-color: #e8e8ff;
     background-image: url(images/bar_solid_24px.png);
     background-repeat: repeat-x;
