--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -412,7 +412,7 @@ input.ep_form_text {
 #mc_embed_signup input.email { 
     font-family: sans-serif;
     height: 30px;
-    width: 50%
+    width: 50%;
     min-width: 250px;
     font-size: 95%;
 }
