--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -413,7 +413,7 @@ input.ep_form_text {
     font-family: sans-serif;
     height: 30px;
     width: 50%;
-    min-width: 250px;
+    min-width: 100%;
     font-size: 95%;
 }
 
