--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -491,6 +491,11 @@ input.ep_form_text {
     .ep_multi_heading { 
 	text-align: left !important;
     }
+    
+    /* search menu columns */
+    .ep_multi_heading.ep_table_cell {
+	width: 40%;
+    }
 
     /* search text borders */
     .ep_search_fields > div > div, .ep_table_row > div{
